feat: change footer links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>portfolio</title>
+  <title>Alexa Rise</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/queries.css">
   <link rel="icon" href="assets/img/logo.ico">
@@ -183,31 +183,24 @@
     </main>
 
     <footer class="footer">
-      <p>© <span class="footer__year">2022</span> 
-      <a class="footer__link footer__link_github" href="https://github.com/jaysuno0" target="_blank">github</a></p>
-      <a class="footer__link footer__link_school" href="https://rs.school/js-stage0/" target="_blank">Rolling Scopes School</a>
-      <ul class="footer__icon-wrapper">
+      <ul class="footer__wrapper footer__wrapper_icons">
         <li>
-          <a class="footer__link" href="https://www.instagram.com/" target="_blank">
-            <img class="footer__icon" src="assets/svg/instagram-logo.svg" alt="instagram link">
+          <a class="footer__link" href="https://jaysuno0.github.io/rsschool-cv/" target="_blank">
+            <img class="footer__icon" src="assets/svg/document-logo.svg" alt="CV link">
           </a>
         </li>
         <li>
-          <a class="footer__link" href="https://www.facebook.com/" target="_blank">
-            <img class="footer__icon" src="assets/svg/facebook-logo.svg" alt="facebook link">
+          <a class="footer__link" href="https://t.me/jaysun0" target="_blank">
+            <img class="footer__icon" src="assets/svg/telegram-logo.svg" alt="telegram link">
           </a>
         </li>
         <li>
-          <a class="footer__link" href="https://twitter.com/" target="_blank">
-            <img class="footer__icon" src="assets/svg/twitter-logo.svg" alt="twitter link">
-          </a>
-        </li>
-        <li>
-          <a class="footer__link" href="https://www.pinterest.com/" target="_blank">
-            <img class="footer__icon" src="assets/svg/pinterest-logo.svg" alt="pinterest link">
+          <a class="footer__link" href="https://github.com/jaysun0" target="_blank">
+            <img class="footer__icon" src="assets/svg/github-logo.svg" alt="github link">
           </a>
         </li>
       </ul>
+      <p class="footer__wrapper footer__wrapper_year">©<span class="footer__year">2022</span>
     </footer>
   </div>
   <script type="module" src="assets/js/index.js"></script>
