--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise
           </p>
           <button class="hero__button btn effects">
-            <a class="hero__button-link" href="#contacts">Hire me</a>
+            <a class="hero__link" href="#contacts">Hire me</a>
           </button>
         </div>
       </section>
