feat: change portfolio section effects

--- a/index.html
+++ b/index.html
@@ -97,19 +97,31 @@
         <div class="section__title-wrapper">
           <h2 class="section__title portfolio__title">Portfolio</h2>
         </div>
-        <div class="portfolio__buttons-wrapper">
+        <div class="portfolio__wrapper_buttons">
           <button class="btn effects portfolio__btn portfolio__btn_winter">Winter</button>
           <button class="btn effects portfolio__btn portfolio__btn_spring">Spring</button>
           <button class="btn effects portfolio__btn portfolio__btn_summer">Summer</button>
           <button class="btn effects portfolio__btn portfolio__btn_autumn portfolio__btn_active">Autumn</button>
         </div>
-        <div class="portfolio__images-wrapper">
-          <img class="portfolio__image" src="assets/img/autumn/1.jpg" alt="portfolio image: couple">
-          <img class="portfolio__image" src="assets/img/autumn/2.jpg" alt="portfolio image: horse">
-          <img class="portfolio__image" src="assets/img/autumn/3.jpg" alt="portfolio image: child">
-          <img class="portfolio__image" src="assets/img/autumn/4.jpg" alt="portfolio image: landscape">
-          <img class="portfolio__image" src="assets/img/autumn/5.jpg" alt="portfolio image: couple">
-          <img class="portfolio__image" src="assets/img/autumn/6.jpg" alt="portfolio image: action">
+        <div class="portfolio__wrapper_images">
+          <div class="portfolio__wrapper_image">
+            <img class="portfolio__image" src="assets/img/autumn/1.jpg" alt="portfolio image: couple">
+          </div>
+          <div class="portfolio__wrapper_image">
+            <img class="portfolio__image" src="assets/img/autumn/2.jpg" alt="portfolio image: horse">
+          </div>
+          <div class="portfolio__wrapper_image">
+            <img class="portfolio__image" src="assets/img/autumn/3.jpg" alt="portfolio image: child">
+          </div>
+          <div class="portfolio__wrapper_image">
+            <img class="portfolio__image" src="assets/img/autumn/4.jpg" alt="portfolio image: landscape">
+          </div>
+          <div class="portfolio__wrapper_image">
+            <img class="portfolio__image" src="assets/img/autumn/5.jpg" alt="portfolio image: couple">
+          </div>
+          <div class="portfolio__wrapper_image">
+            <img class="portfolio__image" src="assets/img/autumn/6.jpg" alt="portfolio image: action">
+          </div>
         </div>
       </section>
 
