fix: lots of small fixes with ide

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alexa Rise</title>
+  <title>Sasha Risova</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/queries.css">
   <link rel="icon" href="assets/img/logo.ico">
@@ -48,7 +48,7 @@
     <main class="main">
       <section class="section hero">
         <div class="hero__wrapper">
-          <h1 class="hero__title">Alexa Rise</h1>
+          <h1 class="hero__title">Sasha Risova</h1>
           <p class="hero__motto">
             Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise
           </p>
@@ -132,7 +132,7 @@
         <div class="video__player">
           <img class="video__img" src="assets/img/video.jpg" alt="wedding couple">
           <button class="btn video__button">
-            <img class="video__icon" src="assets/svg/video-button.svg" alt="vido play button">
+            <img class="video__icon" src="assets/svg/video-button.svg" alt="video play button">
           </button>
         </div>
       </section>
