feat: add functional to open form

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <p class="footer__wrapper footer__wrapper_year">©<span class="footer__year">2022</span>
     </footer>
 
-    <div class="wrapper wrapper__form hidden">
+    <div class="wrapper wrapper__form-order hidden">
       <form class="form form_order" action="#" method="GET">
         <p class="form__title form__title_order">Order shooting</p>
         <label class="label label_client-number" for="client-number">Leave your number and we will call you.</label>
