--- a/index.html
+++ b/index.html
@@ -203,11 +203,12 @@
     </footer>
 
     <div class="wrapper wrapper__form-order hidden">
-      <form class="form form_order" action="#" method="GET">
+      <form class="form form_order" action="#" method="get">
         <p class="form__title form__title_order">Order shooting</p>
         <label class="label label_client-number" for="client-number">Leave your number and we will call you.</label>
         <input class="input" type="tel" id="client-number" placeholder="your phone" required>
-        <button class="btn form__btn form__btn_submit" type="submit">submit</button>
+        <button class="btn effects form__btn form__btn_submit" type="submit">submit</button>
+        <button class="btn form__btn form__btn_close">×</button>
       </form>
     </div>
   </div>
