--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
       <form class="form form_order" action="#" method="get">
         <p class="form__title form__title_order">Order shooting</p>
         <label class="label label_client-number" for="client-number">Leave your number and we will call you.</label>
+        <p class="form__error"></p>
         <input class="input" type="tel" id="client-number" placeholder="your phone">
         <button class="btn effects form__btn form__btn_submit" type="submit">submit</button>
         <button class="btn form__btn form__btn_close">×</button>
