fix: placeholders translation

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <form class="contacts__form" action="#" method="get">
             <input class="input contacts__input contacts__input_email" type="email" placeholder="E-mail" required>
             <input class="input contacts__input contacts__input_tel" type="tel" placeholder="Phone" required>
-            <textarea class="textarea contacts__input contacts__input_message" placeholder="Message"></textarea>
+            <textarea class="textarea input contacts__input contacts__input_message" placeholder="Message"></textarea>
             <button class="btn effects contacts__button" type="submit">Send message</button>
           </form>
         </div>
@@ -207,7 +207,7 @@
         <p class="form__title form__title_order">Order shooting</p>
         <label class="label label_client-number" for="client-number">Leave your number and we will call you.</label>
         <p class="form__error"></p>
-        <input class="input" type="tel" id="client-number" placeholder="your phone">
+        <input class="form_order__input input" type="tel" id="client-number" placeholder="your phone">
         <button class="btn effects form__btn form__btn_submit" type="submit">submit</button>
         <button class="btn form__btn form__btn_close">×</button>
       </form>
