--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <section class="section contacts" id="contacts">
         <div class="contacts__container">
           <h2 class="contacts__title">Contact me</h2>
-          <form class="contacts__form" action="#" method="get">
+          <form class="contacts__form" action="" method="get">
             <input class="input contacts__input contacts__input_email" type="email" placeholder="E-mail" required>
             <input class="input contacts__input contacts__input_tel" type="tel" placeholder="Phone" required>
             <textarea class="textarea input contacts__input contacts__input_message" placeholder="Message"></textarea>
